minor fix: better body padding for mobile + text alignment

--- a/css/design.css
+++ b/css/design.css
@@ -231,6 +231,7 @@ div.description ul {
 ul.tools-list li{
     /* border: solid 1px orange; */
     color: #58524B;
+    text-align: center;
 }
 
 article.second-project {
@@ -577,4 +578,18 @@ a.red-click:active {
     background-color:#D9B87D;
     transform: scale(0.99);
     transition: color 0.2s ease;
+}
+
+@media(max-width: 600px) {
+    body{
+        padding-left:15px;
+        padding-right:15px;
+    }
+}
+
+@media(max-width: 480px) {
+    body{
+        padding-left:5px;
+        padding-right:5px;
+    }
 }
