--- a/css/landing.css
+++ b/css/landing.css
@@ -380,3 +380,17 @@ div.explore-buttons{
     gap:15px;
     justify-content: space-around;
 }
+
+@media(max-width: 600px) {
+    body{
+        padding-left:15px;
+        padding-right:15px;
+    }
+}
+
+@media(max-width: 480px) {
+    body{
+        padding-left:5px;
+        padding-right:5px;
+    }
+}
